cluster/apps/eve/rabbitmq/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/affinity: cookie
    hajimari.io/enable: "true"
    hajimari.io/group: eve-dev
    hajimari.io/icon: rocket-launch
    nginx.ingress.kubernetes.io/auth-url: |-
      https://auth.rwcloud.org/outpost.goauthentik.io/auth/nginx
    # If you're using domain-level auth, use the authentication URL instead of the application URL
    nginx.ingress.kubernetes.io/auth-signin: |-
      https://auth.rwcloud.org/outpost.goauthentik.io/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: |-
      Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Host $http_host;  
  name: eve-dev-rabbitmq
spec:
  ingressClassName: nginx
  rules:
  - host: eve-dev-rabbitmq.rwcloud.org
    http:
      paths:
      - backend:
          service:
            name: eve-dev-rabbitmq
            port:
              number: 15672
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - eve-dev-rabbitmq.rwcloud.org
    secretName: eve-dev-rabbitmq
